# AA-SI_Full_Pipeline_Example

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
example_notebooks/NEFSC_use_case_example_1/: NEFSC_use_case_example_1.ipynb
example_notebooks/NEFSC_use_case_example_1/NEFSC_use_case_1_json_files/: SWD_20160703-OE20.json
example_notebooks/NEFSC_use_case_example_1/NEFSC_use_case_1_raw_files/: CUHP_Move-Helpful-Links_2024.docx  HB1603_L1-D20160703-T183957.bot  HB1603_L1-D20160703-T183957.idx  HB1603_L1-D20160703-T190259.bot  HB1603_L1-D20160703-T190259.idx  HB1603_L1-D20160703-T191429.bot
example_notebooks/NEFSC_use_case_example_1/Output-Logs/: calibration_flags.json
example_notebooks/NEFSC_use_case_example_1/standardized_cal_files/: HB1603_L1-D20160703_cal_nc_params.yml  HB1603_L1-D20160703_cal_report.yml
example_notebooks/NEFSC_use_case_example_2/: NEFSC_use_case_example_2.ipynb
example_notebooks/NEFSC_use_case_example_2/Output-Logs/: calibration_flags.json
example_notebooks/NEFSC_use_case_example_2/standardized_cal_files/: HB1603_L1-D20160703_cal_nc_params.yml  HB1603_L1-D20160703_cal_report.yml
example_notebooks/NEFSC_use_case_example_2_refactored/: nefsc_uc_e2_granular.ipynb  nefsc_uc_e2_refactored.ipynb  nefsc_uc_e2_refactored_two_pass.ipynb  nefsc_us_e2_recipe.yaml
example_notebooks/NEFSC_use_case_example_2_refactored/nefsc_uc_e2_cal_outputs/single_channel_calibration_files/: 2016-07-18__120000__config-1.yml
example_notebooks/Workshop_example/: workshop_example.ipynb  workshop_recipe.yaml
example_notebooks/Workshop_example/Output-Logs/: calibration_flags.json
example_notebooks/Workshop_example/nefsc_uc_e2_cal_outputs/single_channel_calibration_files/: 2016-07-18__18000__config-1.yml  2016-07-18__200000__config-1.yml
example_notebooks/Workshop_example_no_compare/: simplified_workshop_recipe.yaml
example_notebooks/Workshop_example_no_compare/nefsc_uc_e2_cal_outputs/mapping_files/: calibration_configurations.yaml
example_notebooks/Workshop_example_no_compare/nefsc_uc_e2_cal_outputs/single_channel_calibration_files/: 2016-07-18__38000__config-1.yml  2016-07-18__70000__config-1.yml
example_notebooks/Workshop_example_recipe_refactor/: hb1603_survey_pipeline.yaml  pipeline_modified.yaml  refactored_workshop_example.ipynb  refactored_workshop_recipe.yaml
example_notebooks/calibration_files/HB200901_cal/: HB_038kHz_cal_02262009.cal  HB_200kHz_cal_02262009.cal
example_notebooks/line_files/: SpermWhaleClicks_click_data_HB1603_SpermWhaleDive_Span0.2_07032016_1853_UTC.csv
example_notebooks/zooplankton_example/: zooplankton.ipynb
example_notebooks/zooplankton_example/Output-Logs/: calibration_flags.json
example_notebooks/zooplankton_example/raw_files/: D20090405-T114914.bot  D20090405-T114914.idx
example_notebooks/zooplankton_example/standardized_cal_files/: D20090405_cal_nc_params.yml  D20090405_cal_report.yml
src/aa_si_pipeline_examples/: __init__.py
src/aa_si_pipeline_examples/NEFSC_use_case_example_1/NEFSC_use_case_1_raw_files/: HB1603_L1-D20160703-T185125.bot  HB1603_L1-D20160703-T185125.idx  (+1 more)
src/aa_si_pipeline_examples/NEFSC_use_case_example_2_refactored/: nefsc_uc_e2_refactored.ipynb
tests/: test_package.py
(+13 files in other folders)
